--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,26 +1,26 @@
 <!--pages/mine/mine.wxml-->
 <view class="mine"  bindtap="ToMyIndex">
   <view class="avatar">
-    <image src="../../src/test.jpg"></image>
+    <image src="{{'data:image/jpeg;base64,'+userinfo.head}}"></image>
   </view>
   <view class="infor">
-    <view class="name">浅航博懿</view>
-    <view class="experience">经验：500</view>
+    <view class="name">{{userinfo.nickname}}</view>
+    <view class="experience">经验：{{userinfo.exp}}</view>
   </view>
   <view class="into">
     个人主页 >
   </view>
   <view class="post">
     <view class="box" bindtap="ToPost">
-      <view>2</view>
+      <view>{{userinfo.stars}}</view>
       <view class="describe">动态</view>
     </view>
     <view class="box" bindtap="ToFollow">
-      <view>0</view>
+      <view>{{userinfo.countOfFollow}}</view>
       <view class="describe">关注</view>
     </view>
     <view class="box" bindtap="ToFollowers">
-      <view>1</view>
+      <view>{{userinfo.countOfFollowers}}</view>
       <view class="describe">粉丝</view>
     </view>
   </view>
