--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -6,19 +6,27 @@
     <view class="{{currentTab==2? 'cur': ''}}" data-current="2" bindtap="switchNav">答疑</view>
   </scroll-view> 
 </view>
-<swiper current="{{currentTab}}" bindchange="PageChange">
+<swiper current="{{currentTab}}" style="height:{{windowHeight}}px" bindchange="PageChange">
   <swiper-item>
-    <view class="posts">
-      <view wx:for="{{posts}}" wx:key="id" class="post" bindtap="ToPost">
-        <view class="avatar"><image src="data:image/png;base64,{{avatar[index]}}"></image></view>
-        <view class="title">{{item.title}}</view>
-        <view class="location">{{item.location}}</view>
-        <view class="outline">{{item.outline}}</view>
-        <view class="thumbnailImage" wx:for="{{item.thumbnailImage}}" wx:for-item="i">
-          <image src="{{i}}"></image>
+    <scroll-view scroll-y="true" refresher-enabled="ture">
+      <view class="posts">
+        <view wx:for="{{posts}}" wx:key="id" class="post" bindtap="ToPost">
+            <view class="avatar"><image src="{{'data:image/jpeg;base64,'+avatar[index]}}"></image></view>
+            <view class="box">
+              <view class="publisher">{{item.publisher}}</view>
+              <view class="time">{{item.startTime}}</view>
+              <view class="location">{{item.location}}</view>
+            </view>
+            <view class="title">{{item.title}}</view>
+            <view class="outline">{{item.outline}}</view>
+            <view class="thum">
+              <view class="thumimage" wx:for="{{item.thumbnailImage}}" wx:for-item="i">
+                <image src="{{i}}"></image>
+              </view>
+            </view>
         </view>
       </view>
-    </view>
+    </scroll-view>
   </swiper-item>
   <swiper-item>
     <view>聊天</view>
