--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,8 @@
 /**index.wxss**/
+page {
+  background-color: rgb(243, 243,243);
+}
+
 .tab {
   display: flex;
   flex-direction: row;
@@ -12,4 +16,88 @@
 .cur {
   color: green;
   border-bottom: 5rpx solid green;
+}
+
+swiper {
+  width: 100%;
+}
+
+.post {
+  margin: 10px 2.5%;
+  background-color: #fff;
+  width: 95%;
+  height: 235px;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 10px;
+}
+
+.avatar {
+  position: relative;
+  width: 10%;
+  margin: 0 2.5%;
+  height: 50px;
+}
+
+.avatar image {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.box {
+  width: 85%;
+  height: 50px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.publisher {
+  width: 100%;
+  height: 50%;
+  font-size: large;
+}
+
+.time, .location {
+  height: 50%;
+  width: 40%;
+  font-size: small;
+}
+
+.title {
+  font-size: large;
+  width: 90%;
+  height: 30px;
+  margin: 0 5%;
+}
+
+.outline {
+  width: 90%;
+  height: 50px;
+  margin: 0 5%;
+}
+
+.thum {
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  margin: 0 5%;
+  height: 90px;
+}
+
+.thum .thumimage {
+  height: 100%;
+  width: 30%;
+  margin: 0 2% 0 0;
+  position: relative;
+}
+
+.thumimage image {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
