--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,7 @@
 <!--index.wxml-->
-<view class="top" style="height: {{statusBarHeight+buttonHeight}}px">
-  <view class="nav" style="padding-top:{{statusBarHeight}}px;height={{buttonHeight}}">
+<view class="bigbox">
+<view class="top" style="height:{{menuinfo.bottom}}px;">
+  <view class="nav" style="padding-top: {{systeminfo.statusBarHeight}}px; height:{{menuinfo.height}}px">
     <scroll-view scroll-x="true" scroll-left="{{scroll}}" class="tab">
       <view class="{{currentTab==0? 'cur': ''}}" data-current="0" bindtap="switchNav">活动</view>
       <view class="{{currentTab==1? 'cur': ''}}" data-current="1" bindtap="switchNav">闲聊</view>
@@ -8,7 +9,8 @@
     </scroll-view> 
   </view>
 </view>
-<swiper current="{{currentTab}}" style="height:{{windowHeight-statusBarHeight-buttonHeight}}px;" bindchange="PageChange">
+<view class="swiper">
+<swiper current="{{currentTab}}" bindchange="PageChange">
   <swiper-item>
     <scroll-view  scroll-top="scrollTop" scroll-y="true" bindscroll="scroll" bindscrolltoupper="RefPost" bindscrolltolower="LoadPost">
       <view class="posts">
@@ -41,3 +43,5 @@
     <view>问题</view>
   </swiper-item>
 </swiper>
+</view>
+</view>
