--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -31,21 +31,22 @@ page {
 
 .username, .password {
   width: 100%;
-  height: 80rpx;
-  margin: 30rpx 0;
+  height: 3em;
+  margin: 0.8em 0;
   display: flex;
-  background-color: rgba(219,254,253,0.8);
+  background-color: rgba(219,254,253,0.5);
   border: solid 1rpx;
   border-radius: 50rpx;
 }
 
 .username image, .password image{
-  margin: 10rpx;
-  width: 50rpx;
-  height: 55rpx;
+  margin: 2%;
+  width: 10%;
+  height: 75%;
 }
 
 button {
+  height: 2.5em;
   margin: 20rpx;
   border: solid 3rpx green;
 }
