--- a/pages/mine/my/index/index.wxml
+++ b/pages/mine/my/index/index.wxml
@@ -1,2 +1,51 @@
-<!--pages/mine/my/index/index.wxml-->
-<text>pages/mine/my/index/index.wxml</text>
+<view class="bigbox">
+  <view class="bg">
+    <image src="{{userinfo.back}}"></image>
+  </view>
+  <view class="top" style="height:{{menuinfo.bottom}}px;"> 
+    <view class="nav" bindtap="Back" style="position: fixed; height: {{menuinfo.height+4}}px; padding: {{systminfo.statusBarHeight}}px 0 0 0.5em; width: 100%; background-color: rgba(255,255,255,{{num}}); z-index: 2;">
+      <view class="back">
+        <text decode="true">&lt;</text>
+      </view>
+    </view>
+  </view>
+  <view class="info">
+    <view class="avatar"><image src="{{'data:image/jpeg;base64,'+userinfo.head}}"></image></view>
+    <view class="post">
+      <view class="box" bindtap="ToPost">
+        <view>{{userinfo.stars}}</view>
+        <view class="describe">获赞</view>
+      </view>
+      <view class="box" bindtap="ToFollow">
+        <view>{{userinfo.countOfFollow}}</view>
+        <view class="describe">关注</view>
+      </view>
+      <view class="box" bindtap="ToFollowers">
+        <view>{{userinfo.countOfFollowers}}</view>
+        <view class="describe">粉丝</view>
+      </view>
+    </view>
+    <view class="edit">编辑资料</view>
+  </view>
+  <view class="information">
+    <view class="nickname">{{userinfo.nickname}}</view>
+    <view class="sex">
+      <view class="sexdescribe">{{userinfo.sex}}</view><view class="sexicon"></view>
+    </view>
+    <view class="signature">{{description}}</view>
+  </view>
+  <view class="sticky" style="position: sticky; top: {{menuinfo.bottom}}px; background-color: #fff;">我的收藏</view>
+  <view class="collections" style="height: {{systminfo.windowHeight - menuinfo.bottom-48}}px">
+      <view wx:for="{{post}}" class="collection" style="height: {{systeminfo.windowHeight-menuinfo.bottom}}px">
+        <view class="postimg"><image src="{{item.thumbnailImage[0]}}"></image></view>
+        <view class="detail">
+          <view class="title">{{item.title}}</view>
+          <view class="location">{{item.location}}</view>
+          <view class="likeco">
+            <view class="like">点赞{{item.star}}</view>
+            <view>收藏{{item.collection}}</view>
+          </view>
+        </view>
+      </view>
+  </view>
+</view>
