--- a/pages/mine/my/index/index.wxss
+++ b/pages/mine/my/index/index.wxss
@@ -1,1 +1,164 @@
-/* pages/mine/my/index/index.wxss */
+page {
+  background-color: #fff;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  color: transparent;
+  }
+
+.bigbox {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.bg {
+  position: absolute;
+  width: 100%;
+  height: 20%;
+  z-index: -1;
+}
+
+.back {
+  height: 100%;
+  font-size: x-large;
+  color: rgb(117,117,117);
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 6.5em;
+  margin-top: 5.5em;
+  background-color: white;
+}
+
+.avatar {
+  position: relative;
+  width: 25%;
+  height: 0;
+  padding-top: 25%;
+  border-radius: 50%;
+}
+
+.avatar image {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+image {
+  width: 100%;
+  height: 100%;
+}
+
+.post {
+  height: 50%;
+  width: 75%;
+  display: flex;
+  flex-direction: row;
+}
+
+.post .box:nth-of-type(2) {
+  border-left: solid rgb(237,237,237);
+  border-right: solid rgb(237,237,237);
+}
+
+.edit {
+  height: 1.7em;
+  width: 65%;
+  text-align: center;
+  color: greenyellow;
+  border: solid greenyellow;
+}
+
+.box {
+  font-size: small;
+  width: 30%;
+  margin: 1em 1%;
+  text-align: center;
+}
+
+
+.information {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 4em
+}
+
+.nickname {
+  width: 20%;
+  font-size: larger;
+  text-align: center;
+}
+
+.sex {
+  width: 30%;
+}
+
+.signature {
+  width: 100%;
+  font-size: small;
+}
+
+.sticky {
+  border-top: solid rgb(237,237,237);
+  border-bottom: solid rgb(237,237,237);
+  height: 3em;
+  display: flex;
+  align-items: center;
+}
+
+.collections {
+  background-color: rgb(237,237,237);
+  flex-flow: column nowrap;
+  width: 100%;
+}
+
+.collection {
+  background-color: #fff;
+  margin: 0.5em 2.5%;
+  display: flex;
+  flex-direction: row;
+  height: 6em;
+  border-radius: 0.5em;
+}
+
+.postimg {
+  height: 96%;
+  margin: 1% 0;
+  width: 25%;
+}
+
+.detail {
+  width: 60%;
+}
+
+.title {
+  font-size: large;
+  height: 1.5em;
+  width: 50%;
+}
+
+.location {
+  font-size: small;
+  height: 2em;
+}
+
+.likeco {
+  font-size: small;
+  height: 2em;
+  display: flex;
+  flex-direction: row;
+}
+
+.like view {
+  width: 25%;
+  margin: 0 5%;
+}
