--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -10,6 +10,12 @@ page {
   flex-direction: column;
 }
 
+.postinfo {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .nav {
   position: fixed;
 }
@@ -37,34 +43,38 @@ swiper{
   height: 100%;
 }
 
+.posts {
+  display: flex;
+  flex-direction: column;
+}
+
 .post {
-  margin: 10px 2.5%;
+  position: relative;
+  margin: 5px 2.5%;
   background-color: #fff;
   width: 95%;
-  height: 240px;
+  height: auto;
   display: flex;
   flex-wrap: wrap;
   border-radius: 10px;
 }
 
 .avatar {
-  position: relative;
-  width: 10%;
-  margin: 0 3%;
-  height: 50px;
+  width: 3.5em;
+  height: 3.5em;
 }
 
 .avatar image {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
+  margin: 10% 0 0 10%;
+  width: 90%;
+  height: 90%;
+  border-radius: 50%;
 }
 
 .box {
-  width: 84%;
-  height: 50px;
+  margin-left: 5%;
+  width: auto;
+  height: 3.5em;
   display: flex;
   flex-wrap: wrap;
 }
@@ -75,54 +85,64 @@ scroll-view {
 
 .publisher {
   width: 100%;
-  height: 50%;
-  font-size: large;
+  margin-top: 0.5em;
 }
 
 .time, .location {
-  height: 50%;
-  width: 35%;
+  width: auto;
+  margin: 0.2em 1.5em 0.5em 0;
   font-size: small;
 }
 
 .title {
-  font-size: large;
+  font-size: larger;
   width: 90%;
-  height: 25px;
+  height: 1.5em;
   margin: 0 5%;
 }
 
 .outline {
   width: 90%;
-  height: 40px;
-  margin: 2px 5%;
+  margin: 0 5%;
 }
 
 .thum {
   display: flex;
   flex-direction: row;
   width: 90%;
-  margin: 0.5px 5%;
-  height: 90px;
+  margin: 0.3em 5% 0 5%;
+  height: 6em;
 }
 
 .thum .thumimage {
   height: 100%;
   width: 30%;
   margin: 0 2% 0 0;
-  position: relative;
 }
 
 .thumimage image {
-  position: absolute;
-  left: 0;
-  top: 0;
   width: 100%;
   height: 100%;
+  border-radius: 0.5em;
+}
+
+.thumone {
+  width: 90%;
+  margin: 0.3em 5% 0 5%;
+}
+
+.thumone view {
+  width: 66.7%;
+  height: auto;
+}
+
+.thumone image {
+  width: 100%;
+  border-radius: 5%;
 }
 
 .footer {
-  margin: 5px 5%;
+  margin: 0 5% 0.5em 5%;
   height: 20px;
   font-size: small;
 }
