--- a/pages/mine/my/index/index.wxss
+++ b/pages/mine/my/index/index.wxss
@@ -116,34 +116,37 @@ image {
 }
 
 .collections {
-  background-color: rgb(237,237,237);
   flex-flow: column nowrap;
   width: 100%;
 }
 
 .collection {
   background-color: #fff;
-  margin: 0.5em 2.5%;
+  padding: 0.4em 2.5%;
   display: flex;
   flex-direction: row;
   height: 6em;
-  border-radius: 0.5em;
+  border-bottom: solid rgb(237,237,237);
 }
 
 .postimg {
   height: 96%;
-  margin: 1% 0;
+  margin: 1% 2%;
   width: 25%;
 }
 
+.postimg image {
+  border-radius: 10%;
+}
+
 .detail {
-  width: 60%;
+  width: 70%;
 }
 
 .title {
   font-size: large;
   height: 1.5em;
-  width: 50%;
+  margin-top: 0.5em;
 }
 
 .location {
@@ -153,12 +156,16 @@ image {
 
 .likeco {
   font-size: small;
-  height: 2em;
+  flex: 1 0 auto;
   display: flex;
   flex-direction: row;
 }
 
-.like view {
-  width: 25%;
-  margin: 0 5%;
+.like {
+  color: rgb(200, 200, 200);
+}
+
+.likeco view {
+  padding: 0.5em 0.5em 0 0;
+  color: rgb(200, 200, 200);
 }
