--- a/pages/index/post/post.wxss
+++ b/pages/index/post/post.wxss
@@ -164,6 +164,23 @@ page {
   margin-right: 0.5em;
 }
 
+.icon .collected{
+  animation: collect 0.5s;
+}
+
+@keyframes collect {
+  0% {
+    scale: 0;
+  }
+  100% {
+    scale: 1.5;
+  }
+}
+
+.icon .liked {
+  animation: collect 0.5s;
+}
+
 .footer image {
   width: 100%;
   height: 100%;
@@ -251,3 +268,4 @@ textarea {
   width: 90%;
   margin: 5%;
 }
+
