--- a/pages/index/post/post.wxss
+++ b/pages/index/post/post.wxss
@@ -94,6 +94,12 @@ page {
   flex-direction: column;
 }
 
+.commenttime {
+  font-size: small;
+  color: rgb(200, 200, 200);
+  width: 70%;
+}
+
 .commentmessage, .replybox {
   height: auto;
   width: 100%;
@@ -106,15 +112,16 @@ page {
 }
 
 .commentafter {
-  width: 80%;
+  width: 82.5%;
+  height: auto;
   padding: 0.25em 0;
   overflow-wrap: break-word;
 }
 
 .replyafter {
-  width: 80%;
   padding: 0.25em 0;
-  margin: 0 0 0.25em 0;
+  margin: 0 0.5em 0.25em 0;
+  width: 82.5%;
   overflow-wrap: break-word;
   background-color: rgb(222, 222, 222);
   border-radius: 0.5em;
