--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,56 +1,9 @@
-<!--index.wxml-->
-<view class="bigbox">
-<view class="top" style="height:{{menuinfo.bottom}}px;">
-  <view class="nav" style="padding-top: {{systeminfo.statusBarHeight}}px; height:{{menuinfo.height}}px">
-    <scroll-view scroll-x="true" scroll-left="{{scroll}}" class="tab">
-      <view class="{{currentTab==0? 'cur': ''}}" data-current="0" bindtap="switchNav">活动</view>
-      <view class="{{currentTab==1? 'cur': ''}}" data-current="1" bindtap="switchNav">闲聊</view>
-      <view class="{{currentTab==2? 'cur': ''}}" data-current="2" bindtap="switchNav">答疑</view>
-    </scroll-view> 
+<NavSwiper title="{{title}}" systemInfo="{{systemInfo}}" menuInfo="{{menuInfo}}">
+  <PostList slot="活动"/>
+  <view slot="闲聊">
+    聊天
   </view>
-</view>
-<view class="swiper">
-<swiper current="{{currentTab}}" bindchange="PageChange" duration="150">
-  <swiper-item>
-    <scroll-view  scroll-top="scrollTop" scroll-y="true" bindscroll="scroll" bindscrolltoupper="RefPost" bindscrolltolower="LoadPost">
-      <view class="posts">
-        <view wx:for="{{posts}}" wx:key="{{item.id}}" data-id="{{item.id}}" class="post" bindtap="ToPost">
-            <view class="avatar"><image src="{{'data:image/jpeg;base64,'+avatar[index]}}"></image></view>
-            <view class="box">
-              <view class="publisher">{{item.publisher}}</view>
-              <view class="time">更新于{{timediff[index]}}</view>
-              <view class="location">地点：{{item.location}}</view>
-            </view>
-            <view class="title">{{item.title}}</view>
-            <view class="outline">{{item.outline}}</view>
-            <block wx:if="{{item.thumbnailImage.length !== 1}}">
-              <view class="thum">              
-                <view class="thumimage" wx:for="{{item.thumbnailImage}}" wx:for-item="i">
-                  <image src="{{i}}" mode="aspectFitp"></image>
-                </view>
-             </view>
-            </block>
-            <block wx:else>
-              <view class="thumone">
-                <view>
-                <image class="thumimage" src="{{item.thumbnailImage[0]}}" mode="widthFix"></image>
-                </view>
-              </view>
-            </block>
-            <view class="footer">
-              <text>{{item.star}}点赞</text> ·
-              <text>{{item.collection}}收藏</text>
-            </view>
-        </view>
-      </view>
-    </scroll-view>
-  </swiper-item>
-  <swiper-item>
-    <view>聊天</view>
-  </swiper-item>
-  <swiper-item>
-    <view>问题</view>
-  </swiper-item>
-</swiper>
-</view>
-</view>
+  <view slot="答疑">
+    闲聊
+  </view>
+</NavSwiper>
