--- a/pages/index/post/post.wxss
+++ b/pages/index/post/post.wxss
@@ -28,6 +28,7 @@ page {
 .head, .commentavatar{
   width: 3em;
   height: 3em;
+  margin: 0 0.5em 0 0;
 }
 
 .head image , .commentavatar image{
@@ -45,7 +46,7 @@ page {
 .publisherinfo .time, .commenttime{
   font-size: small;
   color: rgb(200, 200, 200);
-  width: 70%;
+  width: 60%;
 }
 
 .main .location{
@@ -59,16 +60,17 @@ page {
 
 .postimg {
   width: 100%;
+  margin: 0 0 0.5em 0;
 }
 
 .postimg view {
   width: 100%;
-  margin: 0.5em 0;
+  margin: 0.2em 0;
 }
 
 .postimg image {
   width: 100%;
-  border-radius: 0.8em;
+  border-radius: 0.3em;
 }
 
 .sticky {
@@ -94,10 +96,23 @@ page {
   flex-direction: column;
 }
 
-.commenttime {
-  font-size: small;
-  color: rgb(200, 200, 200);
-  width: 70%;
+.commentlike {
+  width: 3em;
+  height: 1.2em;
+  margin: 1em 0 0 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.commentlikeicon {
+  width: 1em;
+  height: 100%;
+  margin: 0 0.5em 0 0;
+}
+
+.commentlike image {
+  width: 100%;
+  height: 100%;
 }
 
 .commentmessage, .replybox {
