--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -25,28 +25,4 @@
     </view>
   </view>
 </view>
-<view class="service">
-  <view id="servicetext">服务</view>
-  <view class="iconbox">
-    <view class="icon" bindtap="ToSign">
-      <view><image src="../../src/img/service/sign.png" mode="widthFix"></image></view>
-      <view>签到</view>
-    </view>
-    <view class="icon" bindtap="ToCollection">
-      <view><image src="../../src/img/service/collection.png" mode="widthFix"></image></view>
-      <view>收藏</view>
-    </view>
-    <view class="icon" bindtap="ToSet">
-      <view><image src="../../src/img/service/set.png" mode="widthFix"></image></view>
-      <view>设置</view>
-    </view>
-    <view class="icon" bindtap="ToInvite">
-      <view><image src="../../src/img/service/invite.png" mode="widthFix"></image></view>
-      <view>邀请</view>
-    </view>
-    <view class="icon" bindtap="ToFeedback">
-      <view><image src="../../src/img/service/feedback.png" mode="widthFix"></image></view>
-      <view>反馈</view>
-    </view>
-  </view>
-</view>
+<ServiceList list="{{list}}"/>
