--- a/pages/mine/my/index/index.wxss
+++ b/pages/mine/my/index/index.wxss
@@ -1,118 +1,18 @@
 page {
   background-color: #fff;
-}
-
-.bigbox {
   position: relative;
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
 }
 
-.bg {
-  position: absolute;
-  width: 100%;
-  height: 20%;
-  z-index: -1;
-}
 
-.back {
-  height: 100%;
-  font-size: x-large;
-  color: rgb(117,117,117);
-}
-
-.info {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  height: 6em;
-  margin-top: 5.5em;
-  background-color: white;
-}
-
-.avatar {
-  width: 6em;
-  height: 6em;
-  margin: -1em 0 0 0.5em;
-}
-
-image {
-  width: 100%;
-  height: 100%;
-}
-
-.avatar image {
-  border-radius: 50%;
-}
-
-.post {
-  height: 50%;
-  width: 65%;
-  display: flex;
-  flex-direction: row;
-}
-
-.post .box:nth-of-type(2) {
-  border-left: solid rgb(237,237,237);
-  border-right: solid rgb(237,237,237);
-}
-
-.edit {
-  height: 1.8em;
-  width: 65%;
-  margin: 0.3em 0 0 0;
-  color: greenyellow;
-  border: solid 2px greenyellow;
-  border-radius: 0.3em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.box {
-  font-size: small;
-  width: 30%;
-  margin: 1em 1%;
-  text-align: center;
-}
-
-
-.information {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  height: 4.5em;
-}
-
-.nickname {
-  font-size: larger;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  margin: 0 0.3em;
-}
-
-.sex {
-  display: flex;
-  align-items: center;
-}
-
-.signature {
-  width: 100%;
-  font-size: small;
-  margin: 0 0.5em;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
 
 .sticky {
   box-sizing: border-box;
   border-top: solid 1px rgb(237,237,237);
   border-bottom: solid 1px rgb(237,237,237);
-  height: 3em;
+  height: 3rem;
   display: flex;
   align-items: center;
   width: 100%;
@@ -120,7 +20,6 @@ image {
 }
 
 .collections {
-  flex-flow: column nowrap;
   width: 100%;
 }
 
